<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.FeedFragment">


    <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".view.NavigationActivity"
        android:id="@+id/swipe_to_refresh"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_posts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />


    </android.support.v4.widget.SwipeRefreshLayout>

</FrameLayout>